<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.user.androidpermissions.MainActivity">

        <TextView
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="74dp"
            android:gravity="center"
            android:text="@string/enter_your_name"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/num"
            android:layout_width="match_parent"
            android:layout_height="77dp"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/enter_number"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/message"
            android:layout_width="match_parent"
            android:layout_height="84dp"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/enter_message"
            android:inputType="textPersonName" />

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="67dp"
            android:text="@string/send"
            android:textSize="15sp" />

    </LinearLayout>
