<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Main2Activity">

    <LinearLayout
        android:layout_width="368dp"
        android:layout_height="495dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/OTPButton"
            android:layout_width="match_parent"
            android:layout_height="82dp"
            android:gravity="center"
            android:text="@string/otp_confirmation"
            android:textSize="40sp" />

        <EditText
            android:id="@+id/OTP"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:ems="10"
            android:hint="@string/otp"
            android:inputType="textPersonName" />
    </LinearLayout>

    <Button
        android:id="@+id/button"
        android:layout_width="120dp"
        android:layout_height="65dp"
        android:text="@string/button"
        tools:layout_editor_absoluteX="132dp"
        tools:layout_editor_absoluteY="223dp" />
</android.support.constraint.ConstraintLayout>